--- a/index.html
+++ b/index.html
@@ -4,326 +4,27 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <link rel="stylesheet" href="stylesheets/main.css">
+   <link rel='stylesheet' type='text/css' href='node_modules/bulma/css/bulma.css'>
+   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+   <link rel="stylesheet" href="css/main.css">
    <title>The Final Countdown</title>
 </head>
 
-<body>
-
-   <div id="userInput">
-      <input class="sexSelect" type="radio" name="sex" id="male" value="Male">
-      <label for "male">Male</label>
-      <input class="sexSelect" type="radio" name="sex" id="female" value="Female">
-      <label for "female">Female</label><br>
-
-      <label for="month">Date of Birth</label>
-      <select class="dob" name="month" id="month">
-         <option value="" selected="selected">MM</option>
-         <option value="1">01</option>
-         <option value="2">02</option>
-         <option value="3">03</option>
-         <option value="4">04</option>
-         <option value="5">05</option>
-         <option value="6">06</option>
-         <option value="7">07</option>
-         <option value="8">08</option>
-         <option value="9">09</option>
-         <option value="10">10</option>
-         <option value="11">11</option>
-         <option value="12">12</option>
-      </select>
-      <select class="dob" name="year" id="year">
-         <option value="" selected="selected">YYYY</option>
-         <option value="2018">2018</option>
-         <option value="2017">2017</option>
-         <option value="2016">2016</option>
-         <option value="2015">2015</option>
-         <option value="2014">2014</option>
-         <option value="2013">2013</option>
-         <option value="2012">2012</option>
-         <option value="2011">2011</option>
-         <option value="2010">2010</option>
-         <option value="2009">2009</option>
-         <option value="2008">2008</option>
-         <option value="2007">2007</option>
-         <option value="2006">2006</option>
-         <option value="2005">2005</option>
-         <option value="2004">2004</option>
-         <option value="2003">2003</option>
-         <option value="2002">2002</option>
-         <option value="2001">2001</option>
-         <option value="2000">2000</option>
-         <option value="1999">1999</option>
-         <option value="1998">1998</option>
-         <option value="1997">1997</option>
-         <option value="1996">1996</option>
-         <option value="1995">1995</option>
-         <option value="1994">1994</option>
-         <option value="1993">1993</option>
-         <option value="1992">1992</option>
-         <option value="1991">1991</option>
-         <option value="1990">1990</option>
-         <option value="1989">1989</option>
-         <option value="1988">1988</option>
-         <option value="1987">1987</option>
-         <option value="1986">1986</option>
-         <option value="1985">1985</option>
-         <option value="1984">1984</option>
-         <option value="1983">1983</option>
-         <option value="1982">1982</option>
-         <option value="1981">1981</option>
-         <option value="1980">1980</option>
-         <option value="1979">1979</option>
-         <option value="1978">1978</option>
-         <option value="1977">1977</option>
-         <option value="1976">1976</option>
-         <option value="1975">1975</option>
-         <option value="1974">1974</option>
-         <option value="1973">1973</option>
-         <option value="1972">1972</option>
-         <option value="1971">1971</option>
-         <option value="1970">1970</option>
-         <option value="1969">1969</option>
-         <option value="1968">1968</option>
-         <option value="1967">1967</option>
-         <option value="1966">1966</option>
-         <option value="1965">1965</option>
-         <option value="1964">1964</option>
-         <option value="1963">1963</option>
-         <option value="1962">1962</option>
-         <option value="1961">1961</option>
-         <option value="1960">1960</option>
-         <option value="1959">1959</option>
-         <option value="1958">1958</option>
-         <option value="1957">1957</option>
-         <option value="1956">1956</option>
-         <option value="1955">1955</option>
-         <option value="1954">1954</option>
-         <option value="1953">1953</option>
-         <option value="1952">1952</option>
-         <option value="1951">1951</option>
-         <option value="1950">1950</option>
-         <option value="1949">1949</option>
-         <option value="1948">1948</option>
-         <option value="1947">1947</option>
-         <option value="1946">1946</option>
-         <option value="1945">1945</option>
-         <option value="1944">1944</option>
-         <option value="1943">1943</option>
-         <option value="1942">1942</option>
-         <option value="1941">1941</option>
-         <option value="1940">1940</option>
-         <option value="1939">1939</option>
-         <option value="1938">1938</option>
-         <option value="1937">1937</option>
-         <option value="1936">1936</option>
-         <option value="1935">1935</option>
-         <option value="1934">1934</option>
-         <option value="1933">1933</option>
-         <option value="1932">1932</option>
-         <option value="1931">1931</option>
-         <option value="1930">1930</option>
-         <option value="1929">1929</option>
-         <option value="1928">1928</option>
-         <option value="1927">1927</option>
-         <option value="1926">1926</option>
-         <option value="1925">1925</option>
-         <option value="1924">1924</option>
-         <option value="1923">1923</option>
-         <option value="1922">1922</option>
-         <option value="1921">1921</option>
-         <option value="1920">1920</option>
-         <option value="1919">1919</option>
-         <option value="1918">1918</option>
-         <option value="1917">1917</option>
-         <option value="1916">1916</option>
-         <option value="1915">1915</option>
-         <option value="1914">1914</option>
-         <option value="1913">1913</option>
-         <option value="1912">1912</option>
-         <option value="1911">1911</option>
-         <option value="1910">1910</option>
-         <option value="1909">1909</option>
-         <option value="1908">1908</option>
-         <option value="1907">1907</option>
-         <option value="1906">1906</option>
-         <option value="1905">1905</option>
-      </select><br>
-
-      <select name="country" id="country">
-         <option value="" selected="selected">Select Country</option>
-         <option value="United States">United States</option>
-         <option value="United Kingdom">United Kingdom</option>
-         <option value="Afghanistan">Afghanistan</option>
-         <option value="Albania">Albania</option>
-         <option value="Algeria">Algeria</option>
-         <option value="Angola">Angola</option>
-         <option value="Argentina">Argentina</option>
-         <option value="Armenia">Armenia</option>
-         <option value="Aruba">Aruba</option>
-         <option value="Australia">Australia</option>
-         <option value="Austria">Austria</option>
-         <option value="Azerbaijan">Azerbaijan</option>
-         <option value="Bahamas">Bahamas</option>
-         <option value="Bahrain">Bahrain</option>
-         <option value="Bangladesh">Bangladesh</option>
-         <option value="Barbados">Barbados</option>
-         <option value="Belarus">Belarus</option>
-         <option value="Belgium">Belgium</option>
-         <option value="Belize">Belize</option>
-         <option value="Benin">Benin</option>
-         <option value="Bermuda">Bermuda</option>
-         <option value="Bhutan">Bhutan</option>
-         <option value="Bolivia">Bolivia</option>
-         <option value="Botswana">Botswana</option>
-         <option value="Brazil">Brazil</option>
-         <option value="Bulgaria">Bulgaria</option>
-         <option value="Burkina Faso">Burkina Faso</option>
-         <option value="Burundi">Burundi</option>
-         <option value="Cambodia">Cambodia</option>
-         <option value="Cameroon">Cameroon</option>
-         <option value="Canada">Canada</option>
-         <option value="Chad">Chad</option>
-         <option value="Chile">Chile</option>
-         <option value="China">China</option>
-         <option value="Colombia">Colombia</option>
-         <option value="Comoros">Comoros</option>
-         <option value="Costa Rica">Costa Rica</option>
-         <option value="Croatia">Croatia</option>
-         <option value="Cuba">Cuba</option>
-         <option value="Cyprus">Cyprus</option>
-         <option value="Czech Republic">Czech Republic</option>
-         <option value="Denmark">Denmark</option>
-         <option value="Djibouti">Djibouti</option>
-         <option value="Dominica">Dominica</option>
-         <option value="Dominican Republic">Dominican Republic</option>
-         <option value="Ecuador">Ecuador</option>
-         <option value="Egypt">Egypt</option>
-         <option value="El Salvador">El Salvador</option>
-         <option value="Eritrea">Eritrea</option>
-         <option value="Estonia">Estonia</option>
-         <option value="Ethiopia">Ethiopia</option>
-         <option value="Fiji">Fiji</option>
-         <option value="Finland">Finland</option>
-         <option value="France">France</option>
-         <option value="Gabon">Gabon</option>
-         <option value="Gambia">Gambia</option>
-         <option value="Georgia">Georgia</option>
-         <option value="Germany">Germany</option>
-         <option value="Ghana">Ghana</option>
-         <option value="Gibraltar">Gibraltar</option>
-         <option value="Greece">Greece</option>
-         <option value="Greenland">Greenland</option>
-         <option value="Grenada">Grenada</option>
-         <option value="Guadeloupe">Guadeloupe</option>
-         <option value="Guam">Guam</option>
-         <option value="Guatemala">Guatemala</option>
-         <option value="Guinea">Guinea</option>
-         <option value="Guyana">Guyana</option>
-         <option value="Haiti">Haiti</option>
-         <option value="Honduras">Honduras</option>
-         <option value="Hong Kong">Hong Kong</option>
-         <option value="Hungary">Hungary</option>
-         <option value="Iceland">Iceland</option>
-         <option value="India">India</option>
-         <option value="Indonesia">Indonesia</option>
-         <option value="Iraq">Iraq</option>
-         <option value="Ireland">Ireland</option>
-         <option value="Israel">Israel</option>
-         <option value="Italy">Italy</option>
-         <option value="Jamaica">Jamaica</option>
-         <option value="Japan">Japan</option>
-         <option value="Jordan">Jordan</option>
-         <option value="Kazakhstan">Kazakhstan</option>
-         <option value="Kenya">Kenya</option>
-         <option value="Kiribati">Kiribati</option>
-         <option value="Kuwait">Kuwait</option>
-         <option value="Latvia">Latvia</option>
-         <option value="Lebanon">Lebanon</option>
-         <option value="Lesotho">Lesotho</option>
-         <option value="Liberia">Liberia</option>
-         <option value="Liechtenstein">Liechtenstein</option>
-         <option value="Lithuania">Lithuania</option>
-         <option value="Luxembourg">Luxembourg</option>
-         <option value="Macao">Macao</option>
-         <option value="Madagascar">Madagascar</option>
-         <option value="Malawi">Malawi</option>
-         <option value="Malaysia">Malaysia</option>
-         <option value="Maldives">Maldives</option>
-         <option value="Mali">Mali</option>
-         <option value="Mexico">Mexico</option>
-         <option value="Mongolia">Mongolia</option>
-         <option value="Montserrat">Montserrat</option>
-         <option value="Morocco">Morocco</option>
-         <option value="Mozambique">Mozambique</option>
-         <option value="Myanmar">Myanmar</option>
-         <option value="Namibia">Namibia</option>
-         <option value="Nauru">Nauru</option>
-         <option value="Nepal">Nepal</option>
-         <option value="Netherlands">Netherlands</option>
-         <option value="New Zealand">New Zealand</option>
-         <option value="Nicaragua">Nicaragua</option>
-         <option value="Niger">Niger</option>
-         <option value="Nigeria">Nigeria</option>
-         <option value="Norway">Norway</option>
-         <option value="Oman">Oman</option>
-         <option value="Pakistan">Pakistan</option>
-         <option value="Palau">Palau</option>
-         <option value="Panama">Panama</option>
-         <option value="Paraguay">Paraguay</option>
-         <option value="Peru">Peru</option>
-         <option value="Philippines">Philippines</option>
-         <option value="Pitcairn">Pitcairn</option>
-         <option value="Poland">Poland</option>
-         <option value="Portugal">Portugal</option>
-         <option value="Puerto Rico">Puerto Rico</option>
-         <option value="Qatar">Qatar</option>
-         <option value="Reunion">Reunion</option>
-         <option value="Romania">Romania</option>
-         <option value="Rwanda">Rwanda</option>
-         <option value="Saint Helena">Saint Helena</option>
-         <option value="Samoa">Samoa</option>
-         <option value="Saudi Arabia">Saudi Arabia</option>
-         <option value="Senegal">Senegal</option>
-         <option value="Sierra Leone">Sierra Leone</option>
-         <option value="Singapore">Singapore</option>
-         <option value="Slovakia">Slovakia</option>
-         <option value="Slovenia">Slovenia</option>
-         <option value="Somalia">Somalia</option>
-         <option value="South Africa">South Africa</option>
-         <option value="Spain">Spain</option>
-         <option value="Sri Lanka">Sri Lanka</option>
-         <option value="Sudan">Sudan</option>
-         <option value="Suriname">Suriname</option>
-         <option value="Swaziland">Swaziland</option>
-         <option value="Sweden">Sweden</option>
-         <option value="Switzerland">Switzerland</option>
-         <option value="Tajikistan">Tajikistan</option>
-         <option value="Thailand">Thailand</option>
-         <option value="Turkey">Turkey</option>
-         <option value="Uganda">Uganda</option>
-         <option value="Ukraine">Ukraine</option>
-         <option value="United Kingdom">United Kingdom</option>
-         <option value="Uruguay">Uruguay</option>
-         <option value="Uzbekistan">Uzbekistan</option>
-         <option value="Vanuatu">Vanuatu</option>
-         <option value="Venezuela">Venezuela</option>
-         <option value="Yemen">Yemen</option>
-         <option value="Zambia">Zambia</option>
-         <option value="Zimbabwe">Zimbabwe</option>
-      </select>
-      <button id="submit">Submit</button>
-   </div>
-
-   <div id="timerOutput">
-      <!-- timer output -->
-      Years: <span class="years"></span><br> 
-      Days: <span class="days"></span><br> 
-      Hours: <span class="hours"></span><br> 
-      Minutes: <span class="minutes"></span><br> 
-      Seconds: <span class="seconds"></span>
-   </div>
+<body ng-app="CountdownApp">
    
-   <script src="dist/app.js"></script>
+   <user-form></user-form>
+   
+
+   <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+   <script type="text/javascript" src="node_modules/moment/min/moment.min.js"></script>
+   <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
+   <script type="text/javascript" src="node_modules/angular-route/angular-route.min.js"></script>
+   <!-- app scripts -->
+   <script type="text/javascript" src="app/app.js"></script>
+   <!-- factories -->
+   <script type="text/javascript" src="app/factories/TimeFactory.js"></script>
+   <script type="text/javascript" src="app/factories/MetricsFactory.js"></script>
+   <!-- controllers -->
+   <script type="text/javascript" src="app/controllers/UserFormCtrl.js"></script>
 </body>
 </html>
