form style, remove clock, clock style

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="formHtml" lang="en">
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,8 @@
 </head>
 
 <body ng-app="CountdownApp">
+
+   <title-bar></title-bar>
    
    <user-form></user-form>
    
@@ -26,5 +28,6 @@
    <script type="text/javascript" src="app/factories/MetricsFactory.js"></script>
    <!-- controllers -->
    <script type="text/javascript" src="app/controllers/UserFormCtrl.js"></script>
+   <script type="text/javascript" src="app/controllers/TitleBarCtrl.js"></script>
 </body>
 </html>
