styles, multiple clocks, form validation

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
    <script type="text/javascript" src="node_modules/moment/min/moment.min.js"></script>
    <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
    <script type="text/javascript" src="node_modules/angular-route/angular-route.min.js"></script>
+   <script type="text/javascript" src="node_modules/angular-electron/angular-electron.min.js"></script>
    <!-- app scripts -->
    <script type="text/javascript" src="app/app.js"></script>
    <!-- factories -->
