--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <link rel='stylesheet' type='text/css' href='node_modules/bulma/css/bulma.css'>
    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+   <!-- <link rel='stylesheet' type='text/css' href='node_modules/angular-resizable/angular-resizable.min.css'> -->
    <link rel="stylesheet" href="css/main.css">
    <title>The Final Countdown</title>
 </head>
 
-<body ng-class="{ 'visi': !displayClock, 'invi': displayClock }">
+<body ng-class="{ 'visi': !displayClock, 'invi': displayClock, 'show-border': displayClock }">
 
    <title-bar></title-bar>
    
@@ -22,6 +23,7 @@
    <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
    <script type="text/javascript" src="node_modules/angular-route/angular-route.min.js"></script>
    <script type="text/javascript" src="node_modules/angular-electron/angular-electron.min.js"></script>
+   <!-- <script type="text/javascript" src="node_modules/angular-resizable/angular-resizable.min.js"></script> -->
    <!-- app scripts -->
    <script type="text/javascript" src="app/app.js"></script>
    <!-- factories -->
