fitness metric, modal, template chart, partial chart data

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
    <script type="text/javascript" src="node_modules/moment/min/moment.min.js"></script>
    <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
    <script type="text/javascript" src="node_modules/angular-route/angular-route.min.js"></script>
+   <script src="node_modules/chart.js/dist/chart.min.js"></script>
+   <script src="node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
    <script type="text/javascript" src="node_modules/angular-electron/angular-electron.min.js"></script>
    <!-- <script type="text/javascript" src="node_modules/angular-resizable/angular-resizable.min.js"></script> -->
    <!-- app scripts -->
@@ -29,6 +31,7 @@
    <!-- factories -->
    <script type="text/javascript" src="app/factories/TimeFactory.js"></script>
    <script type="text/javascript" src="app/factories/MetricsFactory.js"></script>
+   <script type="text/javascript" src="app/factories/ChartFactory.js"></script>
    <!-- controllers -->
    <script type="text/javascript" src="app/controllers/UserFormCtrl.js"></script>
    <script type="text/javascript" src="app/controllers/TitleBarCtrl.js"></script>
