--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <link rel='stylesheet' type='text/css' href='node_modules/bulma/css/bulma.css'>
    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-   <!-- <link rel='stylesheet' type='text/css' href='node_modules/angular-resizable/angular-resizable.min.css'> -->
+   <link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
    <link rel="stylesheet" href="css/main.css">
    <title>The Final Countdown</title>
 </head>
